objects/Toro_PricingProgram__c.object
<CustomObject>
    <fields>
        <fullName>AllowSupportPlus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Support Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicableProducts__c</fullName>
        <label>Applicable Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blended_DNet_Threshold__c</fullName>
        <description>Threshold for blended DNet %</description>
        <label>Blended DNet % Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corporate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Toro Pricing Programs</relationshipLabel>
        <relationshipName>Toro_Pricing_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentDate__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude From Display</description>
        <inlineHelpText>Exclude From Display</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFirstTee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a first tee pricing program?  This flag is used in pricing program eligibility logic.</description>
        <label>Is First Tee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaxSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a tax supported pricing program? This flag is used in pricing program eligibility logic.</description>
        <label>Is Tax Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinimumThreshold__c</fullName>
        <description>Minimum threshold for a pricing program to be seen in pricing program pick list.</description>
        <label>Large Package Minimum Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimumTractionUnits__c</fullName>
        <description>Used by Small Package Restriction:
Package must be &gt;$50,000 at DN AND a minimum of 2 traction units.</description>
        <label>Minimum Traction Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutCrossThreshold__c</fullName>
        <description>Minimum dollar amount threshold for Large Package that has Out Cross.</description>
        <label>Out Cross Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverriddenPriceList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Price List</label>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Toro Pricing Programs</relationshipLabel>
        <relationshipName>Toro_Pricing_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricingProgramStyle__c</fullName>
        <label>Pricing Program Style</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PricingProgramType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base_w_no_Price_Increase</fullName>
                </value>
                <value>
                    <fullName>Base_w_Qty_Pricing</fullName>
                </value>
                <value>
                    <fullName>Base_w_Support_Plus</fullName>
                </value>
                <value>
                    <fullName>Chart</fullName>
                </value>
                <value>
                    <fullName>Price_List</fullName>
                </value>
                <value>
                    <fullName>Base_w_Model_Pricing</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standrad_w_Exception</fullName>
                </value>
                <value>
                    <fullName>Standard_w_TPP</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>NAF</fullName>
                </value>
                <value>
                    <fullName>Large_Package</fullName>
                </value>
                <value>
                    <fullName>New_Construction_Renovation_LP</fullName>
                </value>
                <value>
                    <fullName>Market_Chart</fullName>
                </value>
                <value>
                    <fullName>Small_Package</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Southern_Demo</fullName>
                </value>
                <value>
                    <fullName>First_Tee</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_0-6_Months</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_7-9_Months</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_10-18_Months</fullName>
                </value>
                <value>
                    <fullName>Stock_Order_Demo_Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricingProgramType__c</fullName>
        <label>Pricing Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support Chart</fullName>
                </value>
                <value>
                    <fullName>Corporate Account</fullName>
                </value>
                <value>
                    <fullName>Performance Part</fullName>
                </value>
                <value>
                    <fullName>State Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SelectProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a dummy field used for product lookup in the product selector</description>
        <inlineHelpText>This is a dummy field used for product lookup in the product selector</inlineHelpText>
        <label>Select Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Enter the Traction unit name or ID</errorMessage>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.REVVY__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.Toro_Product_Type__c</field>
                <operation>equals</operation>
                <value>Finished Good</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Pricing Programs</relationshipLabel>
        <relationshipName>PricingPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>StateProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Toro Pricing Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PricingProgramType__c</columns>
        <columns>PricingProgramStyle__c</columns>
        <columns>OverriddenPriceList__c</columns>
        <columns>StateProvince__c</columns>
        <columns>Exclude__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Toro Pricing Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toro Pricing Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>